--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "ejs": "^2.7.4",
     "express": "^4.17.1",
     "node-fetch": "^2.6.1",
+    "knights-canvas": "^1.3.7-a",
     "puppeteer": "^5.2.1",
     "scrape-yt": "^1.4.8", 
     "yt-search": "^2.10.2",
